--- a/myGoogleHomepage.css
+++ b/myGoogleHomepage.css
@@ -7,6 +7,13 @@ img{
 	width: 275px;
 	height: auto;
 }
+.Canada{
+	display: inline;
+	padding-left: 200px;
+	font-family: helvetica;
+	color: #777;
+	font-weight: bold;
+}
 .textBox{
 	width: 500px;
 }
